Add addSegmentIdentifier method in StorageService interface so that plugins can add arbitrary segment identifiers.
Signed-off-by: Abdelhamid Bakhta <abdelhamid.bakhta@consensys.net>